<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/dialpanel" android:layout_width="fill_parent" android:layout_height="fill_parent" android:baselineAligned="false" android:layout_weight="6.0"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/line_input" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="0.15" />
        <EditText android:textSize="@dimen/dialpanel_text_size" android:textStyle="bold" android:textColor="@android:color/white" android:gravity="center" android:id="@id/digits" android:background="@android:color/transparent" android:focusableInTouchMode="false" android:nextFocusRight="@id/deleteButton" android:layout_width="0.0dip" android:layout_height="wrap_content" android:singleLine="true" android:layout_weight="0.7" android:inputType="phone" />
        <ImageButton android:state_enabled="false" android:layout_gravity="right" android:id="@id/deleteButton" android:background="@android:color/transparent" android:paddingRight="4.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/backspace_selector" android:layout_weight="0.15" />
    </LinearLayout>
    <TableLayout android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="4.0">
        <TableRow android:id="@id/tableRow1" android:layout_height="0.0px" android:layout_weight="1.0">
            <TextView android:textSize="@dimen/num_size" android:textColor="@drawable/num_color_selector" android:gravity="center" android:id="@id/imageButton1" android:background="@drawable/blank_selector" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_margin="2.0dip" android:text="@string/num1" android:includeFontPadding="false" android:layout_weight="1.0" android:lineSpacingMultiplier="0.9" />
            <TextView android:textSize="@dimen/num_size" android:textColor="@drawable/num_color_selector" android:gravity="center" android:id="@id/imageButton2" android:background="@drawable/blank_selector" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_margin="2.0dip" android:text="@string/num2" android:includeFontPadding="false" android:layout_weight="1.0" android:lineSpacingMultiplier="0.9" />
            <TextView android:textSize="@dimen/num_size" android:textColor="@drawable/num_color_selector" android:gravity="center" android:id="@id/imageButton3" android:background="@drawable/blank_selector" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_margin="2.0dip" android:text="@string/num3" android:includeFontPadding="false" android:layout_weight="1.0" android:lineSpacingMultiplier="0.9" />
        </TableRow>
        <TableRow android:id="@id/tableRow2" android:layout_height="0.0px" android:layout_weight="1.0">
            <TextView android:textSize="@dimen/num_size" android:textColor="@drawable/num_color_selector" android:gravity="center" android:id="@id/imageButton4" android:background="@drawable/blank_selector" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_margin="2.0dip" android:text="@string/num4" android:includeFontPadding="false" android:layout_weight="1.0" android:lineSpacingMultiplier="0.9" />
            <TextView android:textSize="@dimen/num_size" android:textColor="@drawable/num_color_selector" android:gravity="center" android:id="@id/imageButton5" android:background="@drawable/blank_selector" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_margin="2.0dip" android:text="@string/num5" android:includeFontPadding="false" android:layout_weight="1.0" android:lineSpacingMultiplier="0.9" />
            <TextView android:textSize="@dimen/num_size" android:textColor="@drawable/num_color_selector" android:gravity="center" android:id="@id/imageButton6" android:background="@drawable/blank_selector" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_margin="2.0dip" android:text="@string/num6" android:includeFontPadding="false" android:layout_weight="1.0" android:lineSpacingMultiplier="0.9" />
        </TableRow>
        <TableRow android:id="@id/tableRow3" android:layout_height="0.0px" android:layout_weight="1.0">
            <TextView android:textSize="@dimen/num_size" android:textColor="@drawable/num_color_selector" android:gravity="center" android:id="@id/imageButton7" android:background="@drawable/blank_selector" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_margin="2.0dip" android:text="@string/num7" android:includeFontPadding="false" android:layout_weight="1.0" android:lineSpacingMultiplier="0.9" />
            <TextView android:textSize="@dimen/num_size" android:textColor="@drawable/num_color_selector" android:gravity="center" android:id="@id/imageButton8" android:background="@drawable/blank_selector" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_margin="2.0dip" android:text="@string/num8" android:includeFontPadding="false" android:layout_weight="1.0" android:lineSpacingMultiplier="0.9" />
            <TextView android:textSize="@dimen/num_size" android:textColor="@drawable/num_color_selector" android:gravity="center" android:id="@id/imageButton9" android:background="@drawable/blank_selector" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_margin="2.0dip" android:text="@string/num9" android:includeFontPadding="false" android:layout_weight="1.0" android:lineSpacingMultiplier="0.9" />
        </TableRow>
        <TableRow android:id="@id/tableRow4" android:layout_height="0.0px" android:layout_weight="1.0">
            <TextView android:textSize="@dimen/num_size" android:textColor="@drawable/num_color_selector" android:gravity="center" android:id="@id/imageButtonStar" android:background="@drawable/blank_selector" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_margin="2.0dip" android:text="@string/numstar" android:layout_weight="1.0" />
            <TextView android:textSize="@dimen/num_size" android:textColor="@drawable/num_color_selector" android:gravity="center" android:id="@id/imageButton0" android:background="@drawable/blank_selector" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_margin="2.0dip" android:text="@string/num0" android:layout_weight="1.0" />
            <TextView android:textSize="@dimen/num_size" android:textColor="@drawable/num_color_selector" android:gravity="center" android:id="@id/imageButtonPound" android:background="@drawable/blank_selector" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_margin="2.0dip" android:text="@string/numpound" android:layout_weight="1.0" />
        </TableRow>
    </TableLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/dialhanguplayout" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
        <ImageButton android:layout_gravity="center" android:id="@id/dialButton" android:background="@drawable/dial_selector" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="12.0dip" android:layout_marginTop="2.0dip" android:layout_marginRight="12.0dip" android:layout_marginBottom="2.0dip" android:layout_weight="1.0" />
        <LinearLayout android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>